@@ -5,11 +5,11 @@
     <parent>
         <groupId>io.smallrye</groupId>
         <artifactId>smallrye-parent</artifactId>
-        <version>28</version>
+        <version>31</version>
     </parent>
 
     <artifactId>smallrye-graphql-parent</artifactId>
-    <version>1.2.6-SNAPSHOT</version>
+    <version>1.3.5-SNAPSHOT</version>
 
     <packaging>pom</packaging>
     <name>SmallRye: GraphQL Parent</name>
@@ -21,25 +21,25 @@
 <!--        <version.eclipse.microprofile.graphql-client>1.1-SNAPSHOT</version.eclipse.microprofile.graphql-client>-->
         <version.eclipse.microprofile.metrics>3.0</version.eclipse.microprofile.metrics>
         <version.eclipse.microprofile.context-propagation>1.2</version.eclipse.microprofile.context-propagation>
-        <version.smallrye-config>2.3.0</version.smallrye-config>
+        <version.smallrye-config>2.5.1</version.smallrye-config>
         <version.smallrye.metrics>3.0.3</version.smallrye.metrics>
-        <version.smallrye-common>1.6.0</version.smallrye-common>
-        <version.smallrye-mutiny>0.17.0</version.smallrye-mutiny>
-        <version.smallrye-context-propagation>1.2.0</version.smallrye-context-propagation>
+        <version.smallrye-common>1.8.0</version.smallrye-common>
+        <version.smallrye-mutiny>1.1.2</version.smallrye-mutiny>
+        <version.smallrye-context-propagation>1.2.2</version.smallrye-context-propagation>
         <version.opentracing>0.33.0</version.opentracing>
         <version.yasson>1.0.8</version.yasson>
         <version.jakarta-validation>2.0.2</version.jakarta-validation>
-        <version.graphql-java>16.2</version.graphql-java>
-        <verison.io.micrometer>1.7.0</verison.io.micrometer>
-        <version.vertx>4.1.0</version.vertx>
+        <version.graphql-java>17.3</version.graphql-java>
+        <verison.io.micrometer>1.7.5</verison.io.micrometer>
+        <version.vertx>4.1.5</version.vertx>
 
         <!-- Test -->
         <version.arquillian.jetty>1.0.0.CR3</version.arquillian.jetty>
-        <version.jetty>9.4.42.v20210604</version.jetty>
-        <version.smallrye-opentracing>2.0.0</version.smallrye-opentracing>
+        <version.jetty>9.4.44.v20210927</version.jetty>
+        <version.smallrye-opentracing>2.0.1</version.smallrye-opentracing>
         <version.hibernate-validator>6.2.0.Final</version.hibernate-validator>
         <version.glasfish-el>3.0.3</version.glasfish-el>
-        <version.mockito>3.11.1</version.mockito>
+        <version.mockito>4.0.0</version.mockito>
 
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/tck/target/site/jacoco-aggregate/jacoco.xml,${project.basedir}/../tck/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <slf4j-jboss-logging.version>1.2.1.Final</slf4j-jboss-logging.version>
@@ -269,11 +269,6 @@
                 <artifactId>smallrye-graphql-client-implementation-vertx</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>smallrye-graphql-client-implementation-jaxrs</artifactId>
-                <version>${project.version}</version>
-            </dependency>
 
             <!-- Tests -->
             <dependency>
@@ -372,6 +367,28 @@
     </build>
 
     <profiles>
+        <!-- !!! make sure this profile appears before the 'release' module - we need the release module
+        to be the last one in the reactor to make sure it does its job. If integration-tests-jdk16 becomes the
+         last module, release pipeline will break, because nexus-staging-maven-plugin performs the upload
+         in the last module, so the last module can't have staging disabled (which the JDK16 module does have). -->
+        <profile>
+            <id>jdk16plus</id>
+            <activation>
+                <jdk>[16,)</jdk>
+            </activation>
+            <!-- the 'server' submodule also adds its 'integration-tests-jdk16' child in this profile -->
+            <modules>
+                <module>server/integration-tests-jdk16</module>
+            </modules>
+            <properties>
+                <!-- FIXME: hack to allow powerannotations TCK to pass on JDK 16 -->
+                <powerannotations.tck.argLine>--add-opens java.base/java.util=ALL-UNNAMED</powerannotations.tck.argLine>
+                <!-- FIXME: find out why Gradle build doesn't work on JDK 16 in GH actions,
+                        but seems to work locally -->
+                <skip.gradle.build>true</skip.gradle.build>
+            </properties>
+        </profile>
+
         <profile>
             <id>release</id>
             <activation>
@@ -398,7 +415,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>3.3.0</version>
+                        <version>3.3.1</version>
                         <configuration>
                             <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
                             <docletArtifact>
@@ -411,5 +428,6 @@
                 </plugins>
             </build>
         </profile>
+
     </profiles>
 </project>
